cleaning the mess